src/test/06-Errors/error-nspc-no-crash.txt
error-nspc-no-crash.ck:7:1: error: undefined variable 'x'
[7] x;
    ^
